Various bug fixes for updated java, etc.