@@ -156,6 +156,20 @@ private static boolean  use_fait_files = true;
 
 private static AtomicInteger id_counter = new AtomicInteger((int)(Math.random()*256000.0));
 
+private static final String [] OPENS;
+
+static {
+   OPENS = new String [] { "java.desktop/sun.font",
+         "java.base/jdk.internal.icu.impl",
+         "java.desktop/sun.awt", "java.desktop/sun.swing",
+         "java.desktop/javax.swing", "java.base/jdk.internal.math", "java.base/sun.nio.cs", 
+         "java.base/java.nio",
+         "java.base/sun.util.locale.provider",
+         "java.base/jdk.internal.math",
+         "java.base/jdk.internal.misc",
+    };
+}
+
 
 
 
@@ -973,6 +987,11 @@ private boolean startSeede()
       while (tok.hasMoreTokens()) {
          args.add(tok.nextToken());
        }
+    }
+   
+   for (String s : OPENS) {
+      String arg = "--add-opens=" + s + "=ALL-UNNAMED";
+      args.add(arg);
     }
    
    BoardSetup setup = BoardSetup.getSetup();
